--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using SampleApplication
 @using SampleApplication.Models
+@using SampleApplication.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
