Add Identity User

--- a/Views/Shared/_Carousel.cshtml
+++ b/Views/Shared/_Carousel.cshtml
@@ -1,5 +1,5 @@
 ﻿<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner h-50">
+    <div class="carousel-inner">
         <div class="carousel-item active">
             <img src="photos/food.jpg" class="d-block w-100" alt="...">
         </div>
