modification on categeroy repo

--- a/Views/Shared/_ProductDetails.cshtml
+++ b/Views/Shared/_ProductDetails.cshtml
@@ -10,9 +10,10 @@
     </thead>
     <tbody>
         <tr>
-            <td>@Model.Product?.ProductPrice</td>
+            <td>@Model.Product?.ProductPrice LE</td>
             <td>@Model.Product?.Amount</td>
-            <td>@Model.Category?.CategoryName</td>
+            <td>@Model.Category.CategoryName</td>
         </tr>
     </tbody>
 </table>
+<a class="btn btn-primary">Buy now</a>
