--- a/Views/Product/Edit.cshtml
+++ b/Views/Product/Edit.cshtml
@@ -1,5 +1,50 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@model Product
+
+
+<div class="d-flex flex-column justify-content-center align-content-center align-items-center h-100" style="display: none" id="createCategory">
+    <h1 class="w-100 text-center">Add New Category</h1>
+    <form asp-action="Edit" class="h-100 w-100 d-flex justify-content-between flex-column gap-4">
+        <div class="row">
+            <div class="col">
+                <input type="text" asp-for="ProductName" class="form-control" placeholder="@ViewBag.Product.ProductName">
+                <span asp-validation-for="ProductName" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <input type="text" asp-for="Amount" class="form-control" placeholder="@ViewBag.Product.Amount">
+                <span asp-validation-for="Amount" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <input type="text" asp-for="ProductPrice" class="form-control" placeholder="@ViewBag.Product.ProductPrice">
+                <span asp-validation-for="ProductPrice" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <select asp-for="Category" class="form-select" aria-label="Default select example">
+                    @foreach (Category category in ViewBag.Categories)
+                    {
+                        <option value=@category.CategoryName>@category.CategoryName</option>
+                    }
+                </select>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <input type="text" asp-for="ProductImg" class="form-control" placeholder="@ViewBag.Product.ProductImg">
+                <span asp-validation-for="ProductImg" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="mb-3">
+            <textarea class="form-control" placeholder="@ViewBag.Product.ProductDescription" asp-for="ProductDescription" id="exampleFormControlTextarea1" rows="3"></textarea>
+            <span asp-validation-for="ProductDescription" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <input type="submit" value="Edit" class="btn btn-primary" />
+        </div>
+    </form>
+    <div class="text-danger">@ViewBag.message</div>
+</div>
