--- a/Views/Product/Index.cshtml
+++ b/Views/Product/Index.cshtml
@@ -1,6 +1,13 @@
 ﻿@model IEnumerable<Product>
 
-@foreach(Product product in Model)
-{
-    <partial name="_ProductCart" model="@product" />
-}
+<ul class="nav justify-content-center">
+    <li class="nav-item">
+        <a class="nav-link active" asp-controller="Product" asp-action="Create">Create New Product</a>
+    </li>
+</ul>
+<div class="d-flex justify-content-evenly flex-md-wrap">
+    @foreach(Product product in Model)
+    {
+        <partial name="_ProductCart" model="@product" />
+    }
+</div>
