--- a/Views/Shared/_ProductCart.cshtml
+++ b/Views/Shared/_ProductCart.cshtml
@@ -6,5 +6,7 @@
         <h5 class="card-title">@Model.ProductName</h5>
         <p class="card-text">@Model.ProductDescription</p>
         <a asp-controller="Product" asp-action="Show" asp-route-id="@Model.PId" class="btn btn-primary">Details</a>
+        <a asp-controller="Product" asp-action="Edit" asp-route-id="@Model.PId" class="btn btn-primary">Edit</a>
+        <a asp-controller="Product" asp-action="Remove" asp-route-id="@Model.PId" class="btn btn-primary">Delete</a>
     </div>
 </div>
