--- a/Views/Store/Index.cshtml
+++ b/Views/Store/Index.cshtml
@@ -10,7 +10,7 @@
     </div>
     <div class="col-1"></div>
 </div>
-<div class="container m-2">
+<div class="d-flex justify-content-center gap-3 align-items-center align-content-center flex-md-wrap">
     @if(Model.products is not null)
     {
         @foreach(Product product in Model.products)
